Shared (Extension)/Resources/popup.css
:root {
    color-scheme: light dark;
}

body {
    width: 200px;
    padding: 10px 10px 70px 10px;
    font-family: system-ui;
    text-align: center;
    background-color: #F5F5F5;
    color: #333333;
}

.smaller-font {
    font-size: 0.85em;
    text-align: left;
}

.a-toggle {
    margin-bottom: 5px;
    text-align: left;
}

.tooltip-content {
  display: none;
}
.comments-toggle-wrapper:hover + .tooltip-content {
  display: block;
}

.toggle-group {
    margin: 0px 0px 15px 0px;
    padding: 0px;
}
.toggle-group h2 {
    font-size: 1.05em;
    margin: 0px 0px 5px 0px;
}
.toggle-group h3 {
    font-size: 1em;
    margin: 10px 0px 5px 0px;
}

.content-toggles {
    text-align: left;
    font-size: 1em;
    margin-bottom: 2em;
}

a:visited {
    color: blue;
}

#saveButton {
    background-color: #3498DB;
    border: none;
    color: white;
    padding: 7px;
    text-align: center;
    text-decoration: none;
    font-size: 0.8em;
    font-weight: bold;
    border-radius: 2px;
}





/******  make the checkboxes use 'prohibited' symbols   ******/
/* Base for label styling */
.hide-checkboxes [type="checkbox"]:not(:checked),
.hide-checkboxes [type="checkbox"]:checked {
    position: absolute;
    left: 0;
    opacity: 0.01;
}
.hide-checkboxes [type="checkbox"]:not(:checked) + label,
.hide-checkboxes [type="checkbox"]:checked + label {
    position: relative;
    padding-left: 24px;
    line-height: 1.4;
    cursor: pointer;
    font-size: 16px
}
/* checkbox aspect */
.hide-checkboxes [type="checkbox"]:not(:checked) + label:before,
.hide-checkboxes [type="checkbox"]:checked + label:before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 15px;
    height: 15px;
    border: 1px solid #aaa;
    background: #FFF;
    border-radius: .2em;
    box-shadow: inset 0 1px 3px rgba(0,0,0, .1), 0 0 0 rgba(203, 34, 237, .2);
    -webkit-transition: all .275s;
            transition: all .275s;
}
/* checked mark aspect */
.hide-checkboxes [type="checkbox"]:not(:checked) + label:after,
.hide-checkboxes [type="checkbox"]:checked + label:after {
    content: '\01F6AB';
    position: absolute;
    top: 9px;
    left: 0px;
    font-size: 12px;
    color: #CB22ED;
    line-height: 0;
    -webkit-transition: all .1s;
            transition: all .1s;
}
/* checked mark aspect changes */
.hide-checkboxes [type="checkbox"]:not(:checked) + label:after {
    opacity: 0;
    -webkit-transform: scale(0) rotate(45deg);
            transform: scale(0) rotate(45deg);
}
.hide-checkboxes [type="checkbox"]:checked + label:after {
    opacity: 1;
    -webkit-transform: scale(1) rotate(0);
            transform: scale(1) rotate(0);
}
/* Disabled checkbox */
.hide-checkboxes [type="checkbox"]:disabled:not(:checked) + label:before,
.hide-checkboxes [type="checkbox"]:disabled:checked + label:before {
    box-shadow: none;
    border-color: #bbb;
    background-color: #e9e9e9;
}
.hide-checkboxes [type="checkbox"]:disabled:checked + label:after {
    color: #777;
}
.hide-checkboxes [type="checkbox"]:disabled + label {
    color: #aaa;
}
/* Accessibility */
.hide-checkboxes [type="checkbox"]:checked:focus + label:before,
.hide-checkboxes [type="checkbox"]:not(:checked):focus + label:before {
    box-shadow: inset 0 1px 3px rgba(0,0,0, .1), 0 0 0 6px rgba(203, 34, 237, .2);
}


/* style the message box */
#message-box {
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: white;
      display: flex;
      justify-content: center;
      align-items: center;
      font-size: 2em;
      font-weight: bold;
    }


#waitTime {
    width: 50px;
}
.friction-customisation {
    font-size: 0.8em;
    font-style: italic;
    color: gray;
}
.friction-customisation input {
    margin-bottom: 5px;
}
.a-toggle.friction-toggle {
    margin-bottom: 10px;
    margin-top: 0.5em;
    font-size: 0.9em;
}
.a-toggle p {
    margin: 0;
    padding: 0
}
#delay-message {
    font-size: 1.8em;
    line-height: 140%;
    font-style: italic;
    margin: 20px 20px 10px 20px;
}

.delay-time-wrapper {
    color: gray;
}

@keyframes breathe {
  0% { transform: scale(1); }
  50% { transform: scale(1.1); }
  100% { transform: scale(1); }
}


.breathing {
  animation-name: breathe;
  animation-duration: 6s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
}

#delay-content img {
    width: 70%;
    margin-bottom: 30px;
}

#delay-content {
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

#delay-content.show {
  opacity: 1;
}


@media (prefers-color-scheme: dark) {
    /* Dark Mode styles go here. */
    .colored-font {
        color: lightgray;
    }
    
    #delay-content img {
        filter: invert(100%) sepia(0%) saturate(7399%) hue-rotate(180deg) brightness(112%) contrast(80%);
    }
    
    #how-to-arrow-right path, #how-to-arrow-down path {
        fill: rgb(194, 194, 194);
    }
    
}



/******* HIDE IRRELEVANT TOGGLES *******/
@media only screen and (max-device-width: 1312px) {
    .youtube-large-only {
        display:none
    }
    a:visited {
        color: darkgray;
    }
}


/* iPhone */
@media only screen and (max-device-width: 768px) {
    .platform-ipad-mac {
        display: none;
    }
    
    body {
        width: 350px;
    }
    #how-to-image, #how-to-arrow {
        width: 1.2em;
        vertical-align: bottom;
    }
    #how-to-image {
        display: inline-block;
    }
    .previews-text {
        display: inline-block;
    }
    #how-to-description {
        padding: 8px;
        font-style: italic;
    }
    
    #delay-content img {
    width: 70%;
    margin-bottom: 0px;
    }
}


@media only screen and (min-device-width: 768px) {
    .platform-iphone {
        display: none;
    }
}


footer {
    position: fixed;
    bottom: 0;
    left: 0;
    text-align: center;
    padding: 4px 8px;
    font-size: 0.9em;
    border-top: 1px solid rgb(207, 206, 206);
    background-color: #F5F5F5;
}

footer a,
footer a:visited {
    color: #9b9fa7;
    text-decoration: none;

}

.footer-settings {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.save-toggle {
    flex: 1 0 50%; /* Flex-grow | Flex-shrink | Flex-basis */
    text-align: left;
    5px 0px 0px 2px;
    padding: 0px 3px;
}

.friction-toggle {
    flex: 1 0 45%; /* Flex-grow | Flex-shrink | Flex-basis */
    padding: 0px 3px;
}

footer .toggle-group {
    margin: 0px 0px 5px 0px;
}

#friction-customisation-prompt {
    display: inline;
    font-style: italic;
    color: gray;
}

#frictionCustomisationArrow {
    margin-top: 3px;
}

.suggestions-link {
    margin-top: 2px;
}

